--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  hive_flutter: ^1.1.0 
+  hive: ^2.2.3
   font_awesome_flutter: ^10.7.0
   flutter:
     sdk: flutter
@@ -38,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
@@ -47,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
